--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-gtag": "^1.16.1",
     "vue-observe-visibility": "^1.0.0"
   },
   "devDependencies": {
